deployment/fe-portal.service.yml
kind: Service
apiVersion: v1
metadata:
  name: admin-entity-management-portal
spec:
  selector:
    app: admin-entity-management-portal-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
